新增 Git 工具与多消息支持，完善测试与配置
变更清单：
- src/Agent.php：支持多消息格式输入，新增 registerToolInstance 方法，优化 ReAct 循环与消息管理
- src/Llm/LlmConfig.php：增强配置验证，确保 provider/api_key/model 为合法字符串，api_key 非空，timeout 强制转为整数
- src/Tool/Builtin/GitTool.php：新增 Git 工具，提供 git_diff 功能，支持自定义仓库路径与命令执行器
- examples/05-change-notes-tools.php：新增示例，演示使用 Git 工具与模板生成提交说明
- examples/templates/roles.php：新增角色与提交说明模板文件，保持示例文件精简
- phpunit.xml：新增 PHPUnit 配置，设置测试套件、覆盖率与严格模式
- tests/AgentTest.php：新增 Agent 单元测试，覆盖多消息输入场景
- tests/Tool/Builtin/GitToolTest.php：新增 GitTool 单元测试，覆盖正常、覆盖路径、错误处理与参数验证
- .env.example：移除 Redis 配置示例
- .gitignore：添加 .phpunit.cache/ 忽略项
- composer.json：将 test-coverage 脚本重命名为 test:coverage

回归测试建议：
- 运行 phpunit 验证所有单元测试通过（含 AgentTest 与 GitToolTest）
- 运行 phpunit --coverage-html coverage 检查覆盖率是否符合预期
- 运行示例 examples/05-change-notes-tools.php 验证 Git 工具调用与模板渲染正常
- 使用 php-cs-fixer 检查代码风格，确保无新增规范问题

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "scripts": {
         "test": "phpunit",
-        "test-coverage": "phpunit --coverage-html coverage",
+        "test:coverage": "phpunit --coverage-html coverage",
         "phpstan": "phpstan analyse src --level=8",
         "cs-fix": "php-cs-fixer fix src",
         "cs-check": "php-cs-fixer fix src --dry-run --diff"
